--- a/src/main/resources/user.vm
+++ b/src/main/resources/user.vm
@@ -8,30 +8,18 @@
             <thead>
             <tr>
                 <th>#</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Username</th>
+                <th>User</th>
+                <th>Group</th>
             </tr>
             </thead>
             <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
-            </tr>
+            #foreach($user in $users)
+                <tr>
+                    <th scope="row">$velocityCount</th>
+                    <td>$user.name</td>
+                    <td>$user.group</td>
+                </tr>
+            #end
             </tbody>
         </table>
     </div>
