--- a/src/main/resources/layout.vm
+++ b/src/main/resources/layout.vm
@@ -10,6 +10,8 @@
 
     <!-- Bootstrap -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="/css/bootstrap-select.min.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,9 +24,9 @@
 <header>
     <!-- Static navbar -->
     <nav class="navbar navbar-inverse navbar-static-top">
-        <div class="container-fluid">
+        <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">User Management Web Application</a>
+                <a class="navbar-brand" href="/">User Management Web Application</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -32,7 +34,7 @@
                     #if($currentUser)
                         <li>
                             <form method="post" action="/logout/">
-                                <button id="logout">Log out</button>
+                                <button class="btn btn-link" id="logout">Log out</button>
                             </form>
                         </li>
                     #else
@@ -54,6 +56,11 @@
 <script src="/js/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="/js/bootstrap.min.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="/js/bootstrap-select.min.js"></script>
+<!-- Custom JavaScript -->
+<script src="/js/user-app.js"></script>
+
 </body>
 </html>
 #end
