--- a/src/main/resources/index.vm
+++ b/src/main/resources/index.vm
@@ -1,8 +1,11 @@
 #parse("layout.vm")
 #@mainLayout()
 <div class="container">
-    <h2><a href="/user/">Show users and groups</a></h2>
+    <h2><a href="/show-users/">Show users</a></h2>
     <h2><a href="/add-user/">Add user</a></h2>
     <h2><a href="/remove-user/">Remove user</a></h2>
+    <h2><a href="/show-groups/">Show groups</a></h2>
+    <h2><a href="/add-group/">Add group</a></h2>
+    <h2><a href="/remove-group/">Remove group</a></h2>
 </div>
 #end
